--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,8 @@
         "php": "^8.2",
         "konekt/concord": "^1.13",
         "laravel/framework": "^10.43|^11.0",
-        "vanilo/support": "^4.0"
+        "vanilo/support": "^4.0",
+        "vanilo/adjustments": "^4.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
