--- a/composer.json
+++ b/composer.json
@@ -25,12 +25,13 @@
         "konekt/concord": "^1.13",
         "konekt/xtend": "^1.2",
         "laravel/framework": "^10.43|^11.0",
-        "vanilo/support": "^4.0",
-        "vanilo/adjustments": "^4.0"
+        "vanilo/support": "^4.2",
+        "vanilo/adjustments": "^4.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^8.0|^9.0",
+        "vanilo/cart": "^4.2"
     },
     "autoload": {
         "psr-4": { "Vanilo\\Promotion\\": "" }
