--- a/composer.json
+++ b/composer.json
@@ -21,17 +21,17 @@
         }
     ],
     "require": {
-        "php": "^8.2",
+        "php": "^8.3",
         "konekt/concord": "^1.13",
-        "konekt/xtend": "^1.2",
-        "laravel/framework": "^10.43|^11.0",
-        "vanilo/support": "^4.2",
-        "vanilo/adjustments": "^4.2"
+        "konekt/xtend": "^2.0",
+        "laravel/framework": "^10.48|^11.0|^12.0",
+        "vanilo/support": "^5.0",
+        "vanilo/adjustments": "^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^10.0",
-        "orchestra/testbench": "^8.0|^9.0",
-        "vanilo/cart": "^4.2"
+        "phpunit/phpunit": "^10.0|^11.0",
+        "orchestra/testbench": "^8.0|^9.0|^10.0",
+        "vanilo/cart": "^5.0"
     },
     "autoload": {
         "psr-4": { "Vanilo\\Promotion\\": "" }
